--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "alexpechkarev/google-maps": "1.0.4"
+        "alexpechkarev/google-maps": "1.0.4",
+        "vovanmix/google-places-api": "^1.0",
+        "illuminate/html": "5.0.*",
+        "laravelcollective/html": "^5.2",
+        "cornford/googlmapper": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -48,4 +52,5 @@
     "config": {
         "preferred-install": "dist"
     }
+
 }
