--- a/.env.travis
+++ b/.env.travis
@@ -1,10 +1,9 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-DB_HOST=itp460.usc.edu
-DB_DATABASE=food-poisoning
-DB_USERNAME=dunnb
-DB_PASSWORD=iambread
+DB_CONNECTION=testing
+DB_TEST_USERNAME=root
+DB_TEST_PASSWORD=
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
