--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,13 @@
-# Set php version through phpenv. 5.3, 5.4 and 5.5 available
-phpenv local 5.5
+language: php
 
-# Create my testing database
-mysql -e 'create database testing;'
+php:
+  - 5.6
 
-# Install dependencies through Composer
-composer install --prefer-source --no-interaction
+before_script:
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
+  - composer self-update
+  - composer install --no-interaction
 
-# Migrate and seed database using the APP_ENV environment variable of 'testing'
-php artisan migrate --env="testing"
-php artisan db:seed --env="testing"
-
-# Start the PHP server
-php artisan serve >/dev/null 2>&1 &
-
-# Rename phpunit.xml
-cp phpunit.xml.ci phpunit.xml
-
-# Run PHPUnit tests
-vendor/bin/phpunit
-
-# On success, alert Envoyer.io
-wget $ENVOYER_URL
+script:
+  - vendor/bin/phpunit
