--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,9 @@
 language: php
-
 php:
-  - 5.5.9
   - 5.5
   - 5.6
-  - 7.0
-  - hhvm
 
-env:
-  global:
-    - setup=basic
-
-sudo: false
-
-before_install:
-  - travis_retry composer self-update
-
-install:
-  - if [[ $setup = 'basic' ]]; then travis_retry composer install --no-interaction --prefer-dist; fi
-  - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-stable; fi
-  - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-lowest --prefer-stable; fi
+before_script:
+  - composer install --no-interaction
 
 script: vendor/bin/phpunit
